<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Performance Tool</string>
    <string name="title_cpu_section">CPU</string>
    <string name="title_io_section">I/O</string>
    <string name="title_advanced_section">Advanced</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="cpu_cap">Frequency cap</string>
    <string name="governor">Governor</string>
    <string name="apply">Apply</string>
    <string name="menu_refresh">Refresh</string>
    <string name="mhz">MHz</string>
    <string name="io_scheduler">Change IO scheduler</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="being_saved">Settings are being saved.</string>
    <string name="gathering_info">Gathering some info.</string>
    <string name="on_boot">Set on boot</string>
    <string name="title_profiles_section">Profiles</string>
    <string name="allow_overclock">Allow Overclocking</string>
    <string name="allow_overclock_off">(Max: 1x1.7GHz, 3x1.6GHz)</string>
    <string name="allow_overclock_on">(Max: 4x1.7GHz)</string>  
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="about_info">A tool to tweak the performance for some kernels. Released under the GPLv3 license. I am not responsible for any damage caused by this app.
	    \n\nCopyright &#169; 2013  Corné Dorrestijn
	    \n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
	    \n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
	    \n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see http://www.gnu.org/licenses/.</string>
    <string name="disabled_string">Disabled</string>
    <string name="max_cpus">Max CPUs (1&#8211;4)</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="default_profile">Default</string>
    <string name="power_profile">Power Save</string>
    <string name="audio_profile">Audio Profile</string>
    <string name="default_no_remove">You can\'t remove the default profile.</string>
    <string name="volts">CPU</string>
    <string name="change_volts">Change volts</string>
    <string name="warning">Warning</string>
    <string name="suspend_cap">Screen off frequency cap</string>
    <string name="audio_cap">Audio min frequency</string>
    <string name="cpq_governor">CPUQuiet Governor</string>
    <string name="allow_lpoverclock">Allow LP overclocking</string>
    <string name="allow_lpoverclock_off">(Max: 475Mhz)</string>
    <string name="allow_lpoverclock_on">(Max: 620Mhz)</string>  
    <string name="auto_wifi">Turn WiFi off when screen is off</string>
    <string name="title_gpu_section">GPU</string>  
    <string name="allow_decouble_gpu_off">GPU coupled with CPU - GPU will be scaled with CPU frequency</string>
    <string name="allow_decouble_gpu_on">GPU decoupled from CPU - GPU will always run with maximum frequency</string>
    <string name="allow_gpu_decouple">Decouple GPU from CPU</string>
    <string name="cpu_hotplug_mode">CPUQuiet CPU hotplugging </string>
    <string name="cpu_manual_mode">Manual CPU control</string>
    <string name="active_cpus">Active CPUs</string>
    <string name="active_cpu_1">CPU1</string>
    <string name="active_cpu_2">CPU2</string>
    <string name="active_cpu_3">CPU3</string>
</resources>
