<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/frequencyCapTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_cap" />

    <Spinner
        android:id="@+id/frequencyCapSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/cpu_hotplug_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpu_hotplug_mode"
            android:onClick="onCpuHotplugModeClicked"/>
        <RadioButton android:id="@+id/cpu_manual_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpu_manual_mode"
            android:onClick="onCpuHotplugModeClicked"/>
    </RadioGroup>
    
    <TextView
        android:id="@+id/cpqGovernorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpq_governor" />

    <Spinner
        android:id="@+id/cpqGovernorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/maxCpusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_cpus" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/maxCpusSeek"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="3"
            android:progress="3" />

    </LinearLayout>

    <TextView
        android:id="@+id/activeCpusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_cpus" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/activeCpu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onActiveCpuChangeClick"
            android:layout_weight="0.3"
            android:text="@string/active_cpu_1" />
        <CheckBox
            android:id="@+id/activeCpu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onActiveCpuChangeClick"
            android:layout_weight="0.3"
            android:text="@string/active_cpu_2" />
        <CheckBox
            android:id="@+id/activeCpu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onActiveCpuChangeClick"
            android:layout_weight="0.3"
            android:text="@string/active_cpu_3" />
 
    </LinearLayout>

    <TextView
        android:id="@+id/governorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/governor" />

    <Spinner
        android:id="@+id/governorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/overclockSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onOverclockSwitchClick"
        android:text="@string/allow_overclock" />

    <TextView
        android:id="@+id/overclockInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_overclock_off" />

    <Switch
        android:id="@+id/lpOverclockSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onLpOverclockSwitchClick"
        android:text="@string/allow_lpoverclock" />

    <TextView
        android:id="@+id/lpOverclockInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_lpoverclock_off" />

</LinearLayout>
